Added Alert functionality with swagger doc
